0.03

- Added Markdent::Handler::CaptureEvents and Markdent::CapturedEvents. In my
  benchmarks, thawing a Markdent::CaptureEvents object and replaying its
  events to generate HTML for a bunch of documents was about 6x faster than
  parsing from scratch.

- Started implementing some Markdown extensions proposed by David Wheeler as
  the "Theory" dialect. This includes a nice syntax for tables.

- Made it easy to specify a dialect for a parser by writing

    my $parser = Markdent::Parser->new( dialect => 'Theory' );

- Refactored some parser internals to improve subclassability.


0.02   2009-11-24

- Fixed some cases of nested strong and em in the Standard dialect's
  parser. It was broken for cases like this:

  *This **is a test***.

  This should turn into HTML like

  <em>This <strong>is a test</strong></em>

  but instead turned into

  <em>This</em> <em>is a test</em>*.

- Added some missing test dependencies.

- There is now a separate class for each type of event, all of which do the
  Markdent::Role::Event role.


0.01   2009-11-21

- First version, released on an unsuspecting world. Still rather alpha, and
  internals are subject to lots of change.
