@@ -18,7 +18,8 @@ our %EXPORT_TAGS = (
             $BlockEnd
             ),
     ],
-    span => [],
+    span  => [],
+    other => [qw( $HTMLComment )],
 );
 
 our @EXPORT_OK = uniq( map { @{$_} } values %EXPORT_TAGS );
@@ -29,6 +30,8 @@ our $EmptyLines = qr/ (?: $EmptyLine )+ /xm;
 
 our $BlockStart = qr/(?: \A | $EmptyLines )/xm;
 our $BlockEnd = qr/(?=(?: $EmptyLines | \z ) )/xm;
+
+our $HTMLComment = qr{<!--(.+?)-->}s;
 
 1;
 
